ops/op2/test_cases_fail/lifetimes.stderr
error[E0200]: the trait `GarbageCollected` requires an `unsafe impl` declaration
 --> $WORKSPACE/ops/op2/test_cases_fail/lifetimes.rs
  |
  | impl GarbageCollected for Wrap {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: the trait `GarbageCollected` enforces invariants that the compiler can't check. Review the trait documentation and make sure this implementation upholds those invariants before adding the `unsafe` keyword
help: add `unsafe` to this trait implementation
  |
8 | unsafe impl GarbageCollected for Wrap {
  | ++++++

error[E0716]: temporary value dropped while borrowed
 --> $WORKSPACE/ops/op2/test_cases_fail/lifetimes.rs
  |
  | #[op2(fast)]
  | ^^^^^^^^^^^-
  | |          |
  | |          temporary value is freed at the end of this statement
  | creates a temporary value which is freed while still in use
  | argument requires that borrow lasts for `'static`
  |
  = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0521]: borrowed data escapes outside of associated function
 --> $WORKSPACE/ops/op2/test_cases_fail/lifetimes.rs
  |
  | #[op2(fast)]
  | ^^^^^^^^^^^^
  | |
  | `fast_api_callback_options` is a reference that is only valid in the associated function body
  | `fast_api_callback_options` escapes the associated function body here
  | lifetime `'s` defined here
  | argument requires that `'s` must outlive `'static`
  |
  = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0716]: temporary value dropped while borrowed
 --> $WORKSPACE/ops/op2/test_cases_fail/lifetimes.rs
  |
  | #[op2(fast)]
  | ^^^^^^^^^^^-
  | |          |
  | |          temporary value is freed at the end of this statement
  | creates a temporary value which is freed while still in use
  | argument requires that borrow lasts for `'static`
  |
  = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)
